# QuantumShooter

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: main.cpp
src/app/: app.cpp  app.h
